@@ -16,7 +16,6 @@ java_export(
     visibility = ["//visibility:public"],
     exports = [
         ":page-factory",
-        "//java/src/org/openqa/selenium/support/devtools",
         "//java/src/org/openqa/selenium/support/events",
         "//java/src/org/openqa/selenium/support/locators",
         "//java/src/org/openqa/selenium/support/ui:clock",
