@@ -1,16 +1,0 @@
-load("@rules_jvm_external//:defs.bzl", "artifact")
-load("//java:defs.bzl", "java_library")
-
-java_library(
-    name = "devtools",
-    srcs = glob(["*.java"]),
-    visibility = [
-        "//java/src/org/openqa/selenium/support:__pkg__",
-    ],
-    deps = [
-        "//java/src/org/openqa/selenium:core",
-        "//java/src/org/openqa/selenium/devtools",
-        "//java/src/org/openqa/selenium/remote/http",
-        artifact("com.google.guava:guava"),
-    ],
-)
