@@ -16,13 +16,14 @@ java_selenium_test_suite(
     deps = [
         ":test-lib",
         "//java/src/org/openqa/selenium/devtools",
+        "//java/src/org/openqa/selenium/grid/security",
         "//java/src/org/openqa/selenium/json",
         "//java/src/org/openqa/selenium/remote",
         "//java/src/org/openqa/selenium/support",
         "//java/test/org/openqa/selenium/environment",
         "//java/test/org/openqa/selenium/testing:annotations",
         "//java/test/org/openqa/selenium/testing:test-base",
-        "//java/src/org/openqa/selenium/grid/security",
+        "//java/test/org/openqa/selenium/testing/drivers",
         artifact("com.google.guava:guava"),
         artifact("junit:junit"),
         artifact("org.assertj:assertj-core"),
