@@ -1,22 +1,0 @@
-load("@rules_jvm_external//:defs.bzl", "artifact")
-load("//java:defs.bzl", "java_selenium_test_suite")
-
-java_selenium_test_suite(
-    name = "MediumTests",
-    srcs = glob(["*.java"]),
-    browsers = [
-        "chrome",
-        "edge",
-    ],
-    deps = [
-        "//java/src/org/openqa/selenium/devtools",
-        "//java/src/org/openqa/selenium/remote",
-        "//java/src/org/openqa/selenium/support",
-        "//java/test/org/openqa/selenium/environment",
-        "//java/test/org/openqa/selenium/testing:test-base",
-        "//java/test/org/openqa/selenium/testing/drivers",
-        artifact("com.google.guava:guava"),
-        artifact("junit:junit"),
-        artifact("org.assertj:assertj-core"),
-    ],
-)
